# YueMusicPlayer

./: .gitignore  README.md  README.txt  api2_test.py  build.sh  buildozer.spec  client-main.py  client-main.spec  cowon.ini  driver.py  explor.py  freeze.bat  ftptest.py  install.sh  main.py  rcc.bat  requirements.txt  resource.qrc  setup.py  start-avd.sh  testtag.py  todo.txt  yue.spec
bassdsp/: .gitignore  CMakeLists.txt  run_cmake_msvc.bat
bassdsp/scripts/: run_cmake.bat  run_cmake.sh
bassdsp/src/: bassdsp.c  bassdsp.h  common.h
bassdsp/src/alien/bass/: bass_util.c  bass_util.h
bassdsp/src/bassdsp/: dsp_VolEQ.c  dsp_ZBLOG.c  dsp_ZBPEQ.c  dsp_ZBVEQ.c  dsp_ZBVIS.c
bassdsp/src/core/: oFloatVector.c  oFloatVector.h
bassdsp/src/filter/: cheby1.c  cheby1.h  oDF2.c  oDF2.h  oMovingAvg.c  oMovingAvg.h  zbfilter.c  zbfilter.h
hookdll/: .gitignore  CMakeLists.txt  build.bat  cHook.py  hook.c  hook.h  run_cmake_msvc.bat
hookdll/src/: hook.cpp  hook.h  hook_main.c
lib/darwin/x86_64/: .gitignore
service/: main.py
test/: test_asynctree.py  test_client.py  test_clipping.py  test_db.py  test_dbtable.py  test_id3.py  test_library.py  test_playlist.py  test_screen.py  test_sound.py  test_sqlite3.py  test_widget.py  vis.py
test/notification/: main.py
test/notification/service/: main.py
theme/default/: LargeTable.css  Main.css  QDialog.css  QPushButton.css  QScrollBar.css  QTabWidget.css  theme.dict
util/: adb-copy.sh  adb-log.sh  avd-shell.sh  copy-ini  copy.sh  dpi-test.py  freeze.bat  run-gdb  start-avd.sh
yue/: app.py  library.py  playlist.py  screen.py  search.py  settings.py  song.py  sound.py  sqlstore.py
yue/albumart/: abmdiag.py  result.html
yue/app/: app.py  settings.py
yue/app/server/: ingest.py  notification.py  server.py
yue/app/sound/: bassdevice.py  clientdevice.py  device.py  kivydevice.py  manager.py  vlcdevice.py
yue/app/ui/: current.py  home.py  ingest.py  library.py  library2.py  nowplaying.py  preset.py  settings.py  util.py
yue/app/widgets/: expander.py  playlist.py  querybuilder.py  songedit.py  songinfo.py  tristate.py  view.py
yue/client/: client.py  controller.py  hook.py  hook2.py  hookosx.py  remote.py  resource.py  style.py
yue/core/: api.py  api2.py  history.py  history_test.py  library.py  library_test.py  logger.py  nlpdatesearch.py  parse_test.py  playlist.py  playlist_test.py  quicklist.py  repl.py  search.py  search_test.py  settings.py  settings_test.py  shuffle.py  song.py  song_test.py  sqlstore.py  sync.py  util.py  yml.py  yml_test.py
yue/custom_widgets/: datepicker.py  playlist.py  querybuilder.py  songedit.py  songinfo.py  time.py  timebar.py  tristate.py  view.py
yue/explor/: assoc.py  controller.py  display.py  explor.py  fileutil.py  mainwindow.py  quicklist.py  tabview.py  util.py  vagrant.py  watchfile.py  ymlsettings.py
yue/qtcommon/: LargeTable.py  LargeTree.py  LibraryTree.py  LineEdit.py  ResourceManager.py  SongTable.py  TableEditColumn.py  logview.py  playbutton.py  resource.py  scieditor.py  slider.py
yue/server/: app.py  ingest.py  main.py  notification.py  server.py  wsgi.py  yueserver.ini
yue/sound/: bassdevice.py  bassplayer.py  clientdevice.py  device.py  kivydevice.py  manager.py  pybass.py  vlcdevice.py
yue/ui/: current.py  home.py  ingest.py  library.py  nowplaying.py  preset.py  settings.py  util.py
(+100 files in other folders)
